tests/NormalTests/paczka1/small_fuzzy/39981653.err
Error in line 8: ympn A14 29,6
Error in line 12: ympn A919 11,4
